@@ -3,6 +3,19 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2006/10/20
+	* Added config setting "summon_flora_setting", which it you can decide now
+	  two things: a. Whether or not players can harm your floras outside versus
+	  grounds, and b. Whether or not you can summon out and mix different types
+	  of plants at the same time. [Skotlex]
+	* Likely fixed pc_steal_item always failing to steal (it was attempting to
+	  steal random item IDs...) [Skotlex]
+	* Cleaned up a bit the mob on-death event so that when the killer is a
+	  homunculus, it's master will be taken. Also, the variable killerrid will be
+	  set before running the script to specify who delivered the final blow. If
+	  the killerrid matches with the script attached player, you can be sure your
+	  player did the final blow to the mob, otherwise, the attached player is who
+	  did the most damage to the mob. [Skotlex]
 2006/10/19
 	* Cleaned up the log.c file. [Skotlex]
 	* Fixed log_chat not recording anything if the server is compiled in SQL
